<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login"
    tool:context=".RegisterProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/transparent_login_page">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:text="@string/registerProfile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/empEmail"
            android:text="@string/email"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empID"
                android:hint="@string/profileID"
                android:textColor="@android:color/black"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empName"
                android:hint="@string/profileName"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empIC"
                android:hint="@string/profileIC"
                android:inputType="number"
                android:textColor="@android:color/black"
                />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/maleRadio"
                android:textColor="@android:color/black"
                android:layout_weight="0.3"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/femaleRadio"
                android:textColor="@android:color/black"
                android:layout_weight="0.3"/>

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empPh"
                android:hint="@string/profileHp"
                android:inputType="number"
                android:textColor="@android:color/black"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empAddress"
                android:hint="@string/profileAddress"
                android:inputType="text"
                android:textColor="@android:color/black"
                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/profileBtn"
            android:text="@string/updateProfileBtn"
            android:background="@color/buttonLogin"/>

    </LinearLayout>

</RelativeLayout>