<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="info.androidhive.kopilim.fragment_distress"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_polis"
            android:layout_margin="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            android:text="@string/polisDept"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:text="@string/polisName"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            android:text="@string/polisOfficePhone"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:textSize="12dp"
            android:textColor="@android:color/black"
            android:text="@string/polisOncall"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/phonecall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/icon_call"
        tools:ignore="VectorDrawableCompat" />

</FrameLayout>
