<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/transparent_login_page">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo_welcome_page" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/companyName"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp"
            android:textStyle="italic" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:layout_margin="5dp" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailREG"
            android:inputType="textEmailAddress"
            android:ems="7"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/icon_email_login"
            android:textColorHint="@android:color/black"
            android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColorHint="@android:color/black"
            android:layout_margin="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password1REG"
            android:inputType="textPassword"
            android:ems="7"
            android:layout_margin="5dp"
            android:textColorHint="@android:color/black"
            android:drawableLeft="@drawable/icon_password_lock"
            android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:layout_margin="5dp" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password2REG"
            android:inputType="textPassword"
            android:ems="7"
            android:layout_margin="5dp"
            android:textColorHint="@android:color/black"
            android:drawableLeft="@drawable/icon_password_lock"
            android:hint="@string/passwordConfirm"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:layout_margin="5dp" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tarcCode"
                android:inputType="textPassword"
                android:ems="7"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/black"
                android:drawableLeft="@drawable/icon_verify_code"
                android:hint="@string/tarcCode"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regBtn"
            android:text="@string/registerBtn"
            android:background="@color/buttonLogin"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="580dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/layout1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/backToMainPageBtn"
            android:text="@string/backToLoginPage"
            android:textColorHint="@android:color/black"
            android:textSize="12dp"
            android:textAlignment="center"
            android:background="@null"
            android:onClick="click"
            android:layout_margin="10dp"/>

    </LinearLayout>

</RelativeLayout>
