<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.kopilim.fragment_checkOut"
    android:background="@android:color/black">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/checkOut"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/checkOutTime"
            android:text="@string/timeNow"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="50dp"
            />

        <SurfaceView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="700px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cameraView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/cameraView" />


    </RelativeLayout>

</FrameLayout>
