<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/transparent_login_page">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo_welcome_page" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/companyName"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp"
            android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:layout_marginTop="50dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailForgotPass"
            android:inputType="textEmailAddress"
            android:ems="7"
            android:hint="@string/email"
            android:drawableLeft="@drawable/icon_email_login"
            android:textColor="@android:color/black"
            android:layout_marginTop="50dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="400dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassBtn"
            android:text="@string/checkPassword"
            android:background="@color/buttonLogin"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="600dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/goToMainPage"
            android:text="@string/gotPass"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:onClick="click"
            android:background="@null"/>

    </LinearLayout>


</RelativeLayout>